# Tadpole

./: ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  build.rs  build_appimage.sh  build_windows.ps1  build_windows.sh  setup.iss  tadpole.rc
.github/workflows/: release.yml
snap/: snapcraft.yaml
snap/gui/: com.tadpole.seo.desktop
src/: crawler.rs  main.rs  markdown.rs  state.rs
src/ui/: details.rs  link_opportunities.rs  mod.rs  row_data.rs  sidebar.rs  site_visualizer.rs  summary.rs  table.rs  visualizer.rs  window.rs
