[package]
name = "tadpole"
version = "0.2.9"
edition = "2024"
description = "Tadpole — a local SEO crawler and site auditing tool"
license = "MIT"


[dependencies]
gtk = { package = "gtk4", version = "0.11.3", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.9.1", features = ["v1_5"] }
once_cell = "1.21.4"
reqwest = { version = "0.13.4", features = ["json"] }
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
url = "2.5.8"
glib = "0.22.7"
gio = "0.22.6"
parking_lot = "0.12.5"
gdk = { package = "gdk4", version = "0.11.2" }
csv = "1.3.0"
regex = "1.10.3"
headless_chrome = "1.0.22"
serde_json = "1.0.115"
cairo-rs = "0.22"
ego-tree = "0.11.0"


[package.metadata.deb]
maintainer = "Adam Piotrowski"
assets = [
    ["target/release/tadpole", "usr/bin/tadpole", "755"],
    ["tadpolelogonobg.png", "usr/share/pixmaps/com.tadpole.seo.png", "644"],
    ["snap/gui/com.tadpole.seo.desktop", "usr/share/applications/com.tadpole.seo.desktop", "644"]
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/tadpole", dest = "/usr/bin/tadpole", mode = "755" },
    { source = "tadpolelogonobg.png", dest = "/usr/share/pixmaps/com.tadpole.seo.png", mode = "644" },
    { source = "snap/gui/com.tadpole.seo.desktop", dest = "/usr/share/applications/com.tadpole.seo.desktop", mode = "644" }
]




